--- a/api/static/spa.css
+++ b/api/static/spa.css
@@ -28,3 +28,52 @@
 #btnAddPresent {
   border: none;
 }
+
+.ptn-dots {
+  background-image: radial-gradient(rgba(255,255,255,.3) 15%, transparent 15%),
+    radial-gradient(rgba(255,255,255,.3) 15%, transparent 15%);
+  background-size: 60px 60px;
+  background-position: 0 0, 30px 30px;
+}
+
+.ptn-stripes-d {
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
+}
+
+.ptn-stripes-h {
+  background-image: linear-gradient(transparent 50%, rgba(255,255,255,.5) 50%);
+  background-size: 50px 50px;
+}
+
+.ptn-stripes-v {
+  background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 50%);
+  background-size: 50px 50px;
+}
+
+.ptn-waves {
+  background:
+    radial-gradient(circle at 100% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent),
+    radial-gradient(circle at 0% 50%, transparent 20%, rgba(255,255,255,.3) 21%, rgba(255,255,255,.3) 34%, transparent 35%, transparent) 0 -50px;
+  background-size: 75px 100px;
+}
+
+.ptn-zigzag {
+  background:
+  linear-gradient(135deg, rgba(255,255,255,.3) 25%, transparent 25%) -50px 0,
+  linear-gradient(225deg, rgba(255,255,255,.3) 25%, transparent 25%) -50px 0,
+  linear-gradient(315deg, rgba(255,255,255,.3) 25%, transparent 25%),
+  linear-gradient(45deg, rgba(255,255,255,.3) 25%, transparent 25%);
+  background-size: 100px 100px;
+}
+
+.bg-blue {
+  background-color: #5B82DD;
+}
+
+.bg-red {
+  background-color: #FF5757;
+}
+
+.bg-yellow {
+  background-color: #FFC757;
+}
