--- a/api/static/spa.css
+++ b/api/static/spa.css
@@ -57,7 +57,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -69,6 +69,9 @@
   overflow-x: auto;
   display: flex;
   flex-direction: column;
+  margin: auto;
+  max-width: 500px;
+  max-height: 500px;
 }
 
 .modal-header,
